--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
         <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
         <!--<![endif]-->
         <script src="/bower_components/jquery-migrate/jquery-migrate.min.js"></script>
-        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAdQsOcsNNT-shBxth21RnVKqw7bERY5W0"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdQsOcsNNT-shBxth21RnVKqw7bERY5W0"></script>
         <script src="js/plugins.js"></script>
 
         <!-- components -->
