Update rate from 50 to 60 EUR

--- a/prijs-en-afspraken.html
+++ b/prijs-en-afspraken.html
@@ -66,18 +66,20 @@
                     <h2>Prijs</h2>
                     <img id="pricing-lines-top" src="/images/pricing/pricing-lines-top.png"/>
                     <article id="pricing-practice">
-                        <h3>Praktijk<span>: &euro; 50</span></h3>
+                      <!-- TODO remove h3 it is not rendered -->
+                        <h3>Praktijk<span>: &euro; 60</span></h3>
                         <div>
-                            <p>&euro; 50</p>
+                            <p>&euro; 60</p>
                         </div>
-                        <p>Een consultatie duurt 50 minuten en kost 50 euro. Voor een gesprek met twee personen (partner of andere steunfiguur) voorzie ik anderhalf uur en de kostprijs hiervoor is 65 euro.</p>
+                        <p>Een consultatie duurt 60 minuten en kost 60 euro. Voor een gesprek met twee personen (partner of andere steunfiguur) voorzie ik wat meer tijd en de kostprijs hiervoor is 75 euro.</p>
                     </article>
                     <article id="pricing-home">
-                        <h3>Thuis<span>: &euro; 65</span></h3>
+                      <!-- TODO remove h3 it is not rendered -->
+                        <h3>Thuis<span>: &euro; 75</span></h3>
                         <div>
-                            <p>&euro; 65</p>
+                            <p>&euro; 75</p>
                         </div>
-                        <p>Een huisbezoek neemt meestal wat meer tijd in beslag, ongeveer anderhalf uur en kost 65 euro (verplaatsingskosten inbegrepen). Huisbezoeken gebeuren omwille van praktische redenen enkel in Gent en de randgemeenten.</p>
+                        <p>Een huisbezoek neemt meestal wat meer tijd in beslag en kost 75 euro (verplaatsingskosten inbegrepen). Huisbezoeken gebeuren omwille van praktische redenen enkel in Gent en de randgemeenten.</p>
                     </article>
                     <img id="pricing-lines-bottom" src="/images/pricing/pricing-lines-bottom.png"/>
                 </section>
@@ -86,7 +88,7 @@
 
                 <section id="rules" class="small-content">
                     <h2>Afspraken</h2>
-                    <p>Wanneer een afspraak niet binnen de 24u wordt geannuleerd, dan wordt de helft van de prijs van de geplande afspraak aangerekend .</p>
+                    <p>Wanneer een afspraak niet binnen de 24u wordt geannuleerd, dan kan de helft van de prijs van de geplande afspraak aangerekend worden.</p>
                     <!-- <p>Wederzijds respect voor de vrijgehouden tijd en het engagement is voor mij heel belangrijk. Wanneer een afspraak niet binnen de 24u wordt geannuleerd, dan wordt de helft van de prijs van de geplande afspraak aangerekend (=respect voor mijn tijd en engagement). Wanneer ik binnen de 24u een afspraak moet annuleren, dan kom je de volgende keer voor de helft van de prijs (=respect voor jouw tijd en engagement).</p> -->
                 </section>
 
