Remove the address from the footer and contact page

--- a/contact.html
+++ b/contact.html
@@ -64,19 +64,19 @@
 
                 <section>
                     <h1>Contacteer mij</h1>
-                    <p>Adres:<br/>Ooilamstraat 36, 9000 Gent</p>
+                    <p>&nbsp;</p>
                     <p class="smaller">Telefoon:<br/><a href="tel:+32471761095">+32 471 76 10 95</a></p>
                     <p>E-mail:<br/><a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a></p>
-                    <div id="map">&nbsp;</div>
+                    <p>&nbsp;</p>
                 </section>
 
             </div>
 
             <div class="cleaner">&nbsp;</div>
             <footer>
-                <p id="footer-address">Ooilamstraat 36, 9000 Gent</p>
-                <p id="footer-phone">Telefoon: <a href="tel:+32471761095">+32 471 76 10 95</a></p>
-                <p id="footer-mail">E-mail: <a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a><br/>&copy; <small><span id="year"></span> Mother on the Pea</small></p>
+              <p id="footer-mail">E-mail: <a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a></p>
+              <p id="footer-copyright"></br/>&copy; <small><span id="year"></span> Mother on the Pea</small></p>
+              <p id="footer-phone">Telefoon: <a href="tel:+32471761095">+32 471 76 10 95</a></p>
             </footer>
 
         </div>
@@ -88,7 +88,6 @@
         <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
         <!--<![endif]-->
         <script src="/bower_components/jquery-migrate/jquery-migrate.min.js"></script>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdQsOcsNNT-shBxth21RnVKqw7bERY5W0"></script>
         <script src="js/plugins.js"></script>
 
         <!-- components -->
