--- a/prijs-en-afspraken.html
+++ b/prijs-en-afspraken.html
@@ -96,9 +96,9 @@
 
             <div class="cleaner">&nbsp;</div>
             <footer>
-                <p id="footer-address">Ooilamstraat 36, 9000 Gent</p>
-                <p id="footer-phone">Telefoon: <a href="tel:+32471761095">+32 471 76 10 95</a></p>
-                <p id="footer-mail">E-mail: <a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a><br/>&copy; <small><span id="year"></span> Mother on the Pea</small></p>
+              <p id="footer-mail">E-mail: <a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a></p>
+              <p id="footer-copyright"></br/>&copy; <small><span id="year"></span> Mother on the Pea</small></p>
+              <p id="footer-phone">Telefoon: <a href="tel:+32471761095">+32 471 76 10 95</a></p>
             </footer>
 
         </div>
