--- a/contact.html
+++ b/contact.html
@@ -62,11 +62,11 @@
 
             <div id="content">
 
-                <section>
+                <section class="small-content">
                     <h1>Contacteer mij</h1>
                     <p>&nbsp;</p>
-                    <p class="smaller">Telefoon:<br/><a href="tel:+32471761095">+32 471 76 10 95</a></p>
-                    <p>E-mail:<br/><a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a></p>
+                    <p>Bij voorkeur via e-mail:<br/><a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a></p>
+                    <p class="smaller">Telefonisch:<br/><a href="tel:+32471761095">+32 471 76 10 95</a></p>
                     <p>&nbsp;</p>
                 </section>
 
