Explain how sessions happen during the coronacrisis

--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,8 @@
                     <p>Bij voorkeur via e-mail:<br/><a href="mailto:els@motheronthepea.be">els@motheronthepea.be</a></p>
                     <p class="smaller">Telefonisch:<br/><a href="tel:+32471761095">+32 471 76 10 95</a></p>
                     <p>&nbsp;</p>
+                    <p>Door de coronacrisis zijn momenteel enkel online gesprekken of wandelsessies mogelijk.</p>
+                    <p>&nbsp;</p>
                 </section>
 
             </div>
